deploy/opengauss-discourse/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: opengauss-discourse
  name: opengauss-discourse
